Featured product alignment bug resolved

--- a/server/assets/gtc-assets/css/theme.css
+++ b/server/assets/gtc-assets/css/theme.css
@@ -885,10 +885,16 @@ div.product-middle-col .row {
 	position: relative;
 	min-height: 60px;
 }
-div.product-right-col div.prc-bottom {
+/* div.product-right-col div.prc-bottom {
 	position: absolute;
 	bottom: 0;
 	right: 0;
+} */
+div.product-right-col div.prc-bottom {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin-bottom: -24px;
 }
 div.product-right-col div.prc-bottom p {
 	margin-bottom: 0;
